# src/api/apis/EstablishmentsApi.ts
@@ -1,9 +1,11 @@
+/* tslint:disable */
+/* eslint-disable */
 /**
  * Crypto Map API documentation
  * The Establishments map API is serves a list of establishments that accept crypto as a payment method.
  *
  * The version of the OpenAPI document: 1.0
- *
+ * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
  * https://openapi-generator.tech
@@ -26,33 +28,33 @@ import type {
 } from '../models';
 import {
     AutocompleteApiFromJSON,
-    // AutocompleteApiToJSON,
+    AutocompleteApiToJSON,
     CategoriesIssueInnerFromJSON,
-    // CategoriesIssueInnerToJSON,
+    CategoriesIssueInnerToJSON,
     CategoryInnerFromJSON,
-    // CategoryInnerToJSON,
+    CategoryInnerToJSON,
     CryptoEstablishmentFromJSON,
-    // CryptoEstablishmentToJSON,
+    CryptoEstablishmentToJSON,
     CryptoEstablishmentBaseInnerFromJSON,
-    // CryptoEstablishmentBaseInnerToJSON,
+    CryptoEstablishmentBaseInnerToJSON,
     CurrencyInnerFromJSON,
-    // CurrencyInnerToJSON,
-    // EstablishmentCandidateBodyFromJSON,
+    CurrencyInnerToJSON,
+    EstablishmentCandidateBodyFromJSON,
     EstablishmentCandidateBodyToJSON,
     EstablishmentCandidateResponseFromJSON,
-    // EstablishmentCandidateResponseToJSON,
-    // EstablishmentIssueBodyFromJSON,
+    EstablishmentCandidateResponseToJSON,
+    EstablishmentIssueBodyFromJSON,
     EstablishmentIssueBodyToJSON,
     EstablishmentIssueResponseFromJSON,
-    // EstablishmentIssueResponseToJSON,
+    EstablishmentIssueResponseToJSON,
 } from '../models';
 
 export interface AutocompleteRequest {
     query: string;
 }
 
-export interface GetEstablishmentByIdRequest {
-    establishmentId: string;
+export interface GetEstablishmentByUuidRequest {
+    uuid: string;
 }
 
 export interface PostCandidateRequest {
@@ -70,7 +72,7 @@ export interface SearchEstablishmentsRequest {
 }
 
 /**
- *
+ * 
  */
 export class EstablishmentsApi extends runtime.BaseAPI {
 
@@ -82,7 +84,7 @@ export class EstablishmentsApi extends runtime.BaseAPI {
             throw new runtime.RequiredError('query','Required parameter requestParameters.query was null or undefined when calling autocomplete.');
         }
 
-        const queryParameters: runtime.HTTPQuery = {};
+        const queryParameters: any = {};
 
         if (requestParameters.query !== undefined) {
             queryParameters['query'] = requestParameters.query;
@@ -112,7 +114,8 @@ export class EstablishmentsApi extends runtime.BaseAPI {
      * Nimiq Categories
      */
     async getCategoriesRaw(initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<Array<CategoryInner>>> {
-        const queryParameters: runtime.HTTPQuery = {};
+        const queryParameters: any = {};
+
         const headerParameters: runtime.HTTPHeaders = {};
 
         const response = await this.request({
@@ -137,7 +140,8 @@ export class EstablishmentsApi extends runtime.BaseAPI {
      * CryptoCurrencies
      */
     async getCurrenciesRaw(initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<Array<CurrencyInner>>> {
-        const queryParameters: runtime.HTTPQuery = {};
+        const queryParameters: any = {};
+
         const headerParameters: runtime.HTTPHeaders = {};
 
         const response = await this.request({
@@ -159,18 +163,19 @@ export class EstablishmentsApi extends runtime.BaseAPI {
     }
 
     /**
-     * Get establishment by id
+     * Get establishment by uuid
      */
-    async getEstablishmentByIdRaw(requestParameters: GetEstablishmentByIdRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<CryptoEstablishment>> {
-        if (requestParameters.establishmentId === null || requestParameters.establishmentId === undefined) {
-            throw new runtime.RequiredError('establishmentId','Required parameter requestParameters.establishmentId was null or undefined when calling getEstablishmentById.');
+    async getEstablishmentByUuidRaw(requestParameters: GetEstablishmentByUuidRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<CryptoEstablishment>> {
+        if (requestParameters.uuid === null || requestParameters.uuid === undefined) {
+            throw new runtime.RequiredError('uuid','Required parameter requestParameters.uuid was null or undefined when calling getEstablishmentByUuid.');
         }
 
-        const queryParameters: runtime.HTTPQuery = {};
+        const queryParameters: any = {};
+
         const headerParameters: runtime.HTTPHeaders = {};
 
         const response = await this.request({
-            path: `/api/establishments/{establishmentId}`.replace(`{${"establishmentId"}}`, encodeURIComponent(String(requestParameters.establishmentId))),
+            path: `/api/establishments/{uuid}`.replace(`{${"uuid"}}`, encodeURIComponent(String(requestParameters.uuid))),
             method: 'GET',
             headers: headerParameters,
             query: queryParameters,
@@ -180,10 +185,10 @@ export class EstablishmentsApi extends runtime.BaseAPI {
     }
 
     /**
-     * Get establishment by id
+     * Get establishment by uuid
      */
-    async getEstablishmentById(requestParameters: GetEstablishmentByIdRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<CryptoEstablishment> {
-        const response = await this.getEstablishmentByIdRaw(requestParameters, initOverrides);
+    async getEstablishmentByUuid(requestParameters: GetEstablishmentByUuidRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<CryptoEstablishment> {
+        const response = await this.getEstablishmentByUuidRaw(requestParameters, initOverrides);
         return await response.value();
     }
 
@@ -191,7 +196,8 @@ export class EstablishmentsApi extends runtime.BaseAPI {
      * Get issue categories with its label
      */
     async getIssueCategoriesRaw(initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<Array<CategoriesIssueInner>>> {
-        const queryParameters: runtime.HTTPQuery = {};
+        const queryParameters: any = {};
+
         const headerParameters: runtime.HTTPHeaders = {};
 
         const response = await this.request({
@@ -216,7 +222,8 @@ export class EstablishmentsApi extends runtime.BaseAPI {
      * Create a new candidate for a establishment
      */
     async postCandidateRaw(requestParameters: PostCandidateRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<EstablishmentCandidateResponse>> {
-        const queryParameters: runtime.HTTPQuery = {};
+        const queryParameters: any = {};
+
         const headerParameters: runtime.HTTPHeaders = {};
 
         headerParameters['Content-Type'] = 'application/json';
@@ -244,7 +251,8 @@ export class EstablishmentsApi extends runtime.BaseAPI {
      * Create a new issue for a establishment
      */
     async postEstablishmentIssueRaw(requestParameters: PostEstablishmentIssueRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<EstablishmentIssueResponse>> {
-        const queryParameters: runtime.HTTPQuery = {};
+        const queryParameters: any = {};
+
         const headerParameters: runtime.HTTPHeaders = {};
 
         headerParameters['Content-Type'] = 'application/json';
@@ -272,7 +280,7 @@ export class EstablishmentsApi extends runtime.BaseAPI {
      * Search for establishments
      */
     async searchEstablishmentsRaw(requestParameters: SearchEstablishmentsRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<Array<CryptoEstablishmentBaseInner>>> {
-        const queryParameters: runtime.HTTPQuery = {};
+        const queryParameters: any = {};
 
         if (requestParameters.filterCurrency) {
             queryParameters['filter[currency]'] = requestParameters.filterCurrency;
